samples/_failures_safe/1761528822_69d995_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cd1ff3b.c: In function ‘main’:
./samples/SAFE/__tmp_9cd1ff3b.c:157:9: error: expected declaration or statement at end of input
  157 |         printf("Invalid node input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_9cd1ff3b.c:157:9: error: expected declaration or statement at end of input
